applications/helios-server/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: heliosserver
  name: heliosserver
