applications/helios-server/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
  namespace: heliosserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: helios-server
      component: vote-server
  template:
    metadata:
      labels:
        app: helios-server
        component: vote-server
    spec:
      nodeSelector:
        helios: "true"
      containers:
        - name: helios-server
          image: swr.cn-north-4.myhuaweicloud.com/opensourceway/helios-server/helios-voting:master-10ac082
          volumeMounts:
            - mountPath: /app/helios-server/helios/migrations
              name: helios-data-volume
          resources:
            requests:
              cpu: 2000m
              memory: 2000Mi
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
      volumes:
      - name: helios-data-volume
        persistentVolumeClaim:
          claimName: helios-data-volume
