applications/helios-server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: helios-voting
spec:
  ports:
  - name: httpport
    port: 80
    protocol: TCP
    targetPort: 8080
